syntax = "proto3";

// import "google/protobuf/wrappers.proto";

// #TODO How should I name packages
package github.com.finack.twinkle.rpc.metarmap;
option go_package = "rpc/metarmap";

service MetarMap {
  rpc SetPixel(Pixel) returns(Pixel);
  rpc SetPixels(Pixels) returns(Empty);
}

message Empty {
}

message Pixel {
  optional int32 num = 1;
  // google.protobuf.Int32Value num = 1;
  string color = 2;
}

message Pixels {
  repeated Pixel pixels =  1;
}
